fixed nav text wrapping issue

--- a/millie.css
+++ b/millie.css
@@ -15,6 +15,7 @@ nav { background-color: white;
     position: fixed; top: 0; left: 0;
     z-index: 9999;
     width: 100%;
+    min-width: 500px;
     height: auto;
     text-align: right;
     margin: 0;
